1-example/2-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app-v2
  namespace: nihar-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
      version: v2
  template:
    metadata:
      labels:
        app: first-app
        version: v2
        istio: monitor
    spec:
      containers:
      - image: aputra/myapp-lesson155:latest
        imagePullPolicy: Always
        name: first-app
        ports:
        - name: http
          containerPort: 8080
