1-example/4-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: first-app
  namespace: nihar-world
spec:
  host: first-app
  subsets:
  - name: v1
    labels:
      app: first-app
      version: v1
  - name: v2
    labels:
      app: first-app
      version: v2
